# cargo-generate-templates

./: cargo-generate.toml
basic-rust-app/: Cargo.toml  README.md  cargo-generate.toml  prehook_script.rhai
basic-rust-app/.config/: rustfmt.toml
basic-rust-app/src/: main.rs
rust-project/: .gitattributes  Cargo.toml  cargo-generate.toml  prehook_license.rhai  rustfmt.toml
rust-workspace/: Cargo-notoplevel.toml  Cargo-withtoplevel.toml  README.md  cargo-generate.toml  posthook_xtask.rhai  prehook_license.rhai  prehook_manifest.rhai  prehook_script.rhai  xtask.rs
rust-workspace/tools/xtask/: Cargo.toml
rust-workspace/tools/xtask/src/: error.rs  main.rs  settings.rs  tasks.rs  util.rs
rust-workspace/tools/xtask/src/tasks/: check_env.rs
