[package]
name = "{{project-name}}"
version = "0.1.0-dev"
authors = ["{{authors}}"]
license = "{{license}}"
edition = "2021"
rust-version = "{{rust-version}}"
repository = ""
description = ""

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
# missing_docs = "warn"
unused_crate_dependencies = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = 0 }
unwrap_used = { level = "deny", priority = 1 }
verbose_file_reads = { level = "warn", priority = 1 }
# missing_docs_in_private_items = { level = "warn", priority = 1 }
clone_on_ref_ptr = { level = "deny", priority = 1 }
todo = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }

[dependencies]
