[package]
name = "xtask"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
description = "Task runner for {{project-name}}"

[lints]
workspace = true

[features]
backtrace = ["error-stack/backtrace"]

[dependencies]
